--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/loginFragment">
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.jetpacknavigation.LoginFragment"
+        android:name="com.example.jetpacknavigation.jetpacknavigation.LoginFragment"
         android:label="LoginFragment" >
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
@@ -17,11 +17,11 @@
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.jetpacknavigation.HomeFragment"
+        android:name="com.example.jetpacknavigation.jetpacknavigation.HomeFragment"
         android:label="HomeFragment" />
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.jetpacknavigation.RegisterFragment"
+        android:name="com.example.jetpacknavigation.jetpacknavigation.RegisterFragment"
         android:label="RegisterFragment" >
         <action
             android:id="@+id/action_registerFragment_to_homeFragment"
