tambah tombol add

--- a/app/src/main/res/layout/activity_ecommerce.xml
+++ b/app/src/main/res/layout/activity_ecommerce.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,10 +8,25 @@
     tools:context=".androidfakestoreex.view.EcommerceActivity">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProduct"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:spanCount="2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="2"
         tools:listitem="@layout/item_products"
         />
-</LinearLayout>
+    <TextView
+        android:id="@+id/tvBadge"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:background="@drawable/ic_baseline_badge"
+        android:gravity="center"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="10"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
