--- a/app/src/main/res/layout/activity_ecommerce.xml
+++ b/app/src/main/res/layout/activity_ecommerce.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:spanCount="2"
-        tools:listitem="@layout/item_products"
+        tools:listitem="@layout/items_products"
         />
     <TextView
         android:id="@+id/tvBadge"
