--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -2,11 +2,10 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
+    android:layout_margin="5dp"
     android:orientation="vertical"
-    android:padding="8dp"
     app:cardCornerRadius="5dp">
 
     <LinearLayout
@@ -17,7 +16,7 @@
 
         <ImageView
             android:id="@+id/ivImage"
-            android:layout_width="180dp"
+            android:layout_width="190dp"
             android:layout_height="200dp"
             android:src="@drawable/ic_launcher_background" />
 
