--- a/app/src/main/res/layout/item_users.xml
+++ b/app/src/main/res/layout/item_users.xml
@@ -13,54 +13,48 @@
 
         <ImageView
             android:id="@+id/ivAvatar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:adjustViewBounds="true"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvLastname"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvFirstname"
-            android:layout_width="0dp"
+            android:layout_width="295dp"
             android:layout_height="wrap_content"
             android:hint="First Name"
             android:lines="1"
             android:padding="5dp"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/tvFirstname"
-            app:layout_constraintEnd_toEndOf="@id/ivAvatar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />
+
+            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvLastname"
-            android:layout_width="0dp"
+            android:layout_width="295dp"
             android:layout_height="wrap_content"
             android:hint="Last Name"
             android:lines="1"
             android:padding="5dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/tvEmail"
-            app:layout_constraintEnd_toEndOf="@id/tvFirstname"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvFirstname" />
+            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
+            app:layout_constraintTop_toBottomOf="@+id/tvFirstname" />
 
         <TextView
             android:id="@+id/tvEmail"
-            android:layout_width="0dp"
+            android:layout_width="295dp"
             android:layout_height="wrap_content"
             android:hint="Email"
             android:lines="1"
             android:padding="5dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
-            app:layout_constraintEnd_toEndOf="@id/btnAdd"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvLastname" />
+            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
+            app:layout_constraintTop_toBottomOf="@+id/tvLastname" />
 
         <ImageView
             android:id="@+id/btnAdd"
@@ -69,8 +63,8 @@
             android:layout_gravity="right"
             android:padding="5dp"
             android:src="@drawable/ic_baseline_add_circle_24"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
